<resources>
    <string name="app_name">Maze</string>
    <string name="startGame">开始游戏</string>
    <string name="infoGame">游戏说明</string>
    <string name="textGame">和我一起走迷宫</string>
    <string name="up">up ↑</string>
    <string name="down">down ↓</string>
    <string name="left">left ←</string>
    <string name="right">right →</string>
    <string name="operation">... 操作说明... 通过手势滑动或者屏幕下方四个方向键控制行走路线..  长按屏幕左下方按钮开启音感能力.. 它会指引你前进的方向.. 控制小球移动到迷宫终点.. 双击屏幕进入游戏.</string>
    <string name="help"> ... 欢迎来到迷宫挑战游戏.. 在音符停止前寻找到迷宫的出口吧!.. 单击该界面可听详细操作说明.. 双击屏幕进入游戏..  </string>
    <string name="play">ability</string>
    <string name="pause">pause</string>

</resources>
